General Fixes, Transition from level to next level setup, but still need to properly init reaching Exit, ContactListener for Collision. Playerloses health on contact with enemies and gains temp Invincibility, player can jump when in contact with wall cells

--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
@@ -120,6 +120,7 @@
   <ItemGroup>
     <ClCompile Include="b2GLDraw.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="CollisionListener.cpp" />
     <ClCompile Include="ExitCell.cpp" />
     <ClCompile Include="FloorCell.cpp" />
     <ClCompile Include="LevelManager.cpp" />
@@ -136,6 +137,7 @@
     <ClInclude Include="b2GLDraw.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Cell.h" />
+    <ClInclude Include="CollisionListener.h" />
     <ClInclude Include="ExitCell.h" />
     <ClInclude Include="FloorCell.h" />
     <ClInclude Include="GameCharacters.h" />
