--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="mazeGeneration.cpp" />
     <ClCompile Include="NonBodyWallCell.cpp" />
+    <ClCompile Include="playerArrow.cpp" />
     <ClCompile Include="PlayerCharacter.cpp" />
     <ClCompile Include="Skeleton.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
@@ -144,6 +145,7 @@
     <ClInclude Include="LevelManager.h" />
     <ClInclude Include="mazeGeneration.h" />
     <ClInclude Include="NonBodyWallCell.h" />
+    <ClInclude Include="playerArrow.h" />
     <ClInclude Include="PlayerCharacter.h" />
     <ClInclude Include="Skeleton.h" />
     <ClInclude Include="stdafx.h" />
