Setup items that the player carries including methods( currently in player update) for creating an instance of aquired items, checking the cooldown of items and cycling through which of the currently aquired items is the one the player currently has selected. Rope Item created and collision setup for that in CollisionListener. Maze Generation changes toa ccount for fake walls properly. medusa slight tweaks

--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="NonBodyWallCell.cpp" />
     <ClCompile Include="playerArrow.cpp" />
     <ClCompile Include="PlayerCharacter.cpp" />
+    <ClCompile Include="RopeItem.cpp" />
     <ClCompile Include="Skeleton.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="TorchLight.cpp" />
@@ -145,12 +146,14 @@
     <ClInclude Include="FakeWallCell.h" />
     <ClInclude Include="FloorCell.h" />
     <ClInclude Include="GameCharacters.h" />
+    <ClInclude Include="GameItems.h" />
     <ClInclude Include="LevelManager.h" />
     <ClInclude Include="mazeGeneration.h" />
     <ClInclude Include="Medusa.h" />
     <ClInclude Include="NonBodyWallCell.h" />
     <ClInclude Include="playerArrow.h" />
     <ClInclude Include="PlayerCharacter.h" />
+    <ClInclude Include="RopeItem.h" />
     <ClInclude Include="Skeleton.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TextureLoader.h" />
