Treasure with random values. a despawn manager that handles iterating through the various vectors and removing anything that is dead / collected/ destroyed. collision listener stuff for new treasure

--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
@@ -120,6 +120,7 @@
   <ItemGroup>
     <ClCompile Include="b2GLDraw.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="DespawnManager.cpp" />
     <ClCompile Include="Griffin.cpp" />
     <ClCompile Include="CollisionListener.cpp" />
     <ClCompile Include="ExitCell.cpp" />
@@ -139,6 +140,7 @@
     <ClCompile Include="soundManager.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="TorchLight.cpp" />
+    <ClCompile Include="Treasure.cpp" />
     <ClCompile Include="TreasureChest.cpp" />
     <ClCompile Include="WallCell.cpp" />
   </ItemGroup>
@@ -146,6 +148,7 @@
     <ClInclude Include="b2GLDraw.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Cell.h" />
+    <ClInclude Include="DespawnManager.h" />
     <ClInclude Include="Griffin.h" />
     <ClInclude Include="CollisionListener.h" />
     <ClInclude Include="ExitCell.h" />
@@ -168,6 +171,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TextureLoader.h" />
     <ClInclude Include="TorchLight.h" />
+    <ClInclude Include="Treasure.h" />
     <ClInclude Include="TreasureChest.h" />
     <ClInclude Include="WallCell.h" />
   </ItemGroup>
