changed the velocities of a few enemies and player slightly. put a timer on the animation swap for the player to slow down the animation frame swap and sync it better with the velocity. used the vertices method previously used on player and enemies to create custom box2dBody shapes for the walls, cutting the corners off the top to allow for smoother movement over them

--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj.filters
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj.filters
@@ -130,7 +130,7 @@
       <Filter>Source Files\GameEngine</Filter>
     </ClCompile>
     <ClCompile Include="Ghost.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\GameCharcters\Enemies</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
