Collision for bomb items to destroy fake walls (might change to normal walls as well). discovered that sometimes treasure chests would somehow lose their texture when opening, resulting in a null ptr and error when i tried to change the texture. This only happened to the randomly generated ones for some reason. believe i've fixed it by changing them to be shjared ptrs in the vector and think the problem may have been somehow they were all being created to be the smae object? resulting in when one of them changed , the rest got messed up textures,etc. Has stopped happening since the switch anyway

--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj.filters
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj.filters
@@ -133,7 +133,7 @@
       <Filter>Source Files\GameEngine</Filter>
     </ClCompile>
     <ClCompile Include="BombItem.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Items</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
