New Item - Hermes Helm (flight). added it to treasure chest,did it's icon and textures,etc. Changed GUI text slightly so that the values are stored in a int before being converted to a string to get rid of the excess of decimal points. made it look nicer and allowed for bigger font size.

--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj.filters
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClCompile Include="HermesBoots.cpp">
       <Filter>Source Files\Items</Filter>
     </ClCompile>
+    <ClCompile Include="HermesHelm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -238,6 +241,9 @@
     </ClInclude>
     <ClInclude Include="PlayerItemStatuses.h">
       <Filter>Header Files\GameCharcters\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="HermesHelm.h">
+      <Filter>Header Files\Items</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
