--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="FlameCloakItem.cpp" />
     <ClCompile Include="FloorCell.cpp" />
     <ClCompile Include="HermesBoots.cpp" />
+    <ClCompile Include="HermesHelm.cpp" />
     <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="mazeGeneration.cpp" />
@@ -163,6 +164,7 @@
     <ClInclude Include="GameCharacters.h" />
     <ClInclude Include="GameItems.h" />
     <ClInclude Include="HermesBoots.h" />
+    <ClInclude Include="HermesHelm.h" />
     <ClInclude Include="ItemHolder.h" />
     <ClInclude Include="LevelManager.h" />
     <ClInclude Include="mazeGeneration.h" />
